chap2/resource/Ingress/ingress-passthrough.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-passthrough
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.example.com
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-tls-svc
          servicePort: 443
